Bug 78391 - General format shows wrong number ...
Summary: General format shows wrong number ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.4.1 rc
Hardware: Other Linux (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: regression
: 88291 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-07 13:27 UTC by Michael Meeks
Modified: 2015-06-01 11:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document. (17.54 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-05-07 13:27 UTC, Michael Meeks
Details
a photo :-) (27.45 KB, image/png)
2014-05-07 13:29 UTC, Michael Meeks
Details
Screenshot (113.30 KB, image/png)
2014-05-07 23:43 UTC, m.a.riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2014-05-07 13:27:25 UTC
Seems the General format doesn't render numbers before the decimal place in some cases. The same documents works in 4.1.x for me.
Comment 1 Michael Meeks 2014-05-07 13:27:49 UTC
Created attachment 98623 [details]
test document.
Comment 2 Michael Meeks 2014-05-07 13:29:04 UTC
Created attachment 98624 [details]
a photo :-)
Comment 3 m.a.riosv 2014-05-07 23:43:56 UTC
Created attachment 98647 [details]
Screenshot

Works for me with:
Win7x64Ultimate
Version: 4.2.4.2 Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f8

With the sample file without do anything after open it.
Comment 4 Michael Meeks 2014-05-08 09:41:53 UTC
Ah - so perhaps this is a CP-4.2 only bug; hmm. Kohei - this is using a build from hash: f847b9ac0ee0d40935ab0d9bcf178180b52c7ca1

Andras - any chance of a test on the latest builds there (perhaps it's fixed already) =)
Comment 5 Andras Timar 2014-05-08 09:57:38 UTC
It works for me in CP Version: 4.2-2
Build ID: e95a61e405b553d6fcf9fc0b89427c60fabc62ab
Comment 6 Kohei Yoshida 2014-05-08 13:19:23 UTC
Maybe this is a master only bug?  I do see it there.
Comment 7 Kohei Yoshida 2014-05-08 13:29:06 UTC
Hmm I see it in the 4.2 branch as well.  Perhaps Linux only?
Comment 8 Kohei Yoshida 2014-05-08 13:29:36 UTC
I'll reopen.
Comment 9 Kohei Yoshida 2014-05-13 00:50:55 UTC
I know exactly what caused this...
Comment 10 Commit Notification 2014-05-13 01:01:51 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=162029e55af8f681966497ab7f20277888eac478

fdo#78391: When numbers are auto-fit, reset clipping parameters.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2014-05-13 01:02:13 UTC
4.2 backport: https://gerrit.libreoffice.org/9335

Luckily it was trivial to fix.
Comment 12 Commit Notification 2014-05-15 17:39:08 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5caa2548f837c54aac44fde0fdbb145145b60091&h=libreoffice-4-2

fdo#78391: When numbers are auto-fit, reset clipping parameters.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Andras Timar 2015-06-01 11:26:17 UTC
*** Bug 88291 has been marked as a duplicate of this bug. ***