fdo#78391: When numbers are auto-fit, reset clipping parameters.

Else it would get processed further to a surprising result.

Change-Id: I3d6f0d680e0c4c3ffe1d28dcbaf51a156f569359